[project]
name = "markdownwrapper"
version = "0.1.0"
description = "一个Markdown格式化工具"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }, # 请替换为您的信息
]
keywords = ["markdown", "formatter", "cli", "text processing"]

dependencies = [
    "rich>=14.0.0",
    "colorama>=0.4.4",
    "pyperclip>=1.8.2",
    "lxml>=4.9.1", # 如果 markdownwrapper.core.markdown_processor 依赖 lxml
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License", # 确保与上面的 license 一致
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/markdownwrapper" # 请替换为您的项目地址
Repository = "https://github.com/yourusername/markdownwrapper" # 请替换为您的项目地址

[project.scripts]
markdownwrapper = "markdownwrapper.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 可选：工具特定配置
# [tool.setuptools.packages.find]
# where = ["."]  # 查找包的根目录，如果你的包在 src 目录下，则为 ["src"]
# include = ["markdownwrapper*"] # 要包含的包
# exclude = ["tests*"] # 要排除的包

# [tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
# testpaths = [
#     "tests",
# ]

# [tool.ruff]
# line-length = 88
# select = ["E", "W", "F", "I", "UP", "C4", "B", "A", "RUF"]
# ignore = []